--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -38,13 +38,8 @@ static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/jack-k
 static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Apple.png
 static=CMedia, direct, proxy, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/CMedia.png
 static=GMedia, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/GMedia.png
-;static=Netflix, GMedia, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
-;static=Spotify, GMedia, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/IconSet/Spotify.png
-;static=YouTube, GMedia, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/YouTube.png
-;static=Netease Music, CMedia, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/IconSet/Netease_Music.png
-;static=Telegram, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/IconSet/Telegram_X.png
-static=Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Microsoft.png
-;static=PayPal, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/PayPal.png
+static=Netflix, GMedia, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
+;static=Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Microsoft.png
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Outside.png
 static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Mainland.png
 static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Speedtest.png
