--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -13,16 +13,17 @@ network_check_url=http://bing.com/
 # 指定在某个 WiFi 下暂停 Quantumult X
 ;ssid_suspended_list=Sophisticated, Sophisticated
 ;udp_whitelist=53, 123, 1900, 80-443
-excluded_routes= 192.168.0.0/16, 172.16.0.0/12, 127.0.0.0/8, 100.64.0.0/10, 17.0.0.0/8, 10.0.0.0/8
+excluded_routes= 0.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
 ;icmp_auto_reply=true
 
 [dns]
 # 如果只在中国大陆境内使用，可以删除 1.0.0.1 和 8.8.8.8 两行 DNS（推荐）
-server=1.0.0.1
-server=8.8.8.8
+server=1.2.4.8
 server=114.114.114.114
-server=119.29.29.29
 server=223.5.5.5
+server=8.8.8.8
+server=system
+
 ;server=8.8.4.4:53
 ;server=/example1.com/8.8.4.4
 ;server=/*.example2.com/223.5.5.5
