--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -40,7 +40,6 @@ static=Netflix, GMedia, direct, img-url=https://raw.githubusercontent.com/jack-k
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Outside.png
 static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Mainland.png
 static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Speedtest.png
-static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Others.png
 
 # static 策略是静态策略，需要手动选择节点
 # available 策略是健康检查策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
@@ -63,15 +62,16 @@ https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Net
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
-https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/LAN.list, tag=LAN (Stick Rules), enabled=true
 
 [rewrite_remote]
 
 [server_local]
+LAN,DIRECT
 
 
 [filter_local]
-final, Others
+GEOIP,CN,DIRECT
+FINAL,Proxy,dns-failed
 
 [rewrite_local]
 
