--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -34,10 +34,10 @@ server=8.8.8.8
 # 默认注释网易云音乐（包含在 CMedia 内）、Netflix/Spotify/YouTube（包含在 GMedia 内）、Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
 ;static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/AdBlock.png
 static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Apple.png
-static=CMedia, direct, proxy, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/CMedia.png
-static=Netflix, GMedia, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
+static=CMedia, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/CMedia.png
+static=Netflix, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Outside.png
-static=Mainland, direct, proxy, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Mainland.png
+static=Mainland, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Mainland.png
 static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Speedtest.png
 
 # static 策略是静态策略，需要手动选择节点
@@ -65,10 +65,7 @@ https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Mai
 
 [server_local]
 
-
 [filter_local]
-GEOIP,CN,DIRECT
-FINAL,Outside,dns-failed
 
 [rewrite_local]
 
