--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -66,6 +66,8 @@ https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Mai
 [server_local]
 
 [filter_local]
+GEOIP,CN,DIRECT
+FINAL,Proxy
 
 [rewrite_local]
 
