--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -66,8 +66,7 @@ https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Mai
 [server_local]
 
 [filter_local]
-GEOIP,CN,DIRECT
-FINAL,Proxy
+final, Outside
 
 [rewrite_local]
 
