--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -33,10 +33,11 @@ server=8.8.8.8
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 # 默认注释网易云音乐（包含在 CMedia 内）、Netflix/Spotify/YouTube（包含在 GMedia 内）、Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
 ;static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/AdBlock.png
-static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Apple.png
-static=CMedia, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/CMedia.png
-static=Netflix, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Outside.png
+static=Netflix, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
+static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Apple.png
+static=Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Microsoft.png
+static=CMedia, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/CMedia.png
 static=Mainland, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Mainland.png
 static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Speedtest.png
 
@@ -54,13 +55,13 @@ static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/jac
 
 [filter_remote]
 ;https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), enabled=true
-https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), enabled=true
-https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), enabled=true
-https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
-https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
+https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
+https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), enabled=true
+https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Microsoft.list, tag=Microsoft (Stick Rules), enabled=true
+https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
-
+https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
 [rewrite_remote]
 
 [server_local]
