--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -67,6 +67,7 @@ https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Spe
 [server_local]
 
 [filter_local]
+HOST-SUFFIX,app-measurement.com,Reject
 HOST-SUFFIX,local,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,17.0.0.0/8,DIRECT
