--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -32,7 +32,7 @@ server=8.8.8.8
 # 请自行在策略组添加需要加入的节点，亦可直接通过选择自带 PROXY 策略节点使用
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 # 默认注释网易云音乐（包含在 CMedia 内）、Netflix/Spotify/YouTube（包含在 GMedia 内）、Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
-static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/AdBlock.png
+;static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/AdBlock.png
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Outside.png
 static=Netflix, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
 static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Apple.png
@@ -54,7 +54,7 @@ static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/jac
 
 
 [filter_remote]
-https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), enabled=true
+;https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), enabled=true
