--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -34,7 +34,7 @@ server=8.8.8.8
 # 默认注释网易云音乐（包含在 CMedia 内）、Netflix/Spotify/YouTube（包含在 GMedia 内）、Telegram/PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
 ;static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/AdBlock.png
 static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Outside.png
-static=Netflix, proxy, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
+static=Netflix, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
 static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Apple.png
 static=Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Microsoft.png
 static=CMedia, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/CMedia.png
