--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -68,6 +68,7 @@ https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Spe
 
 [filter_local]
 HOST-SUFFIX,app-measurement.com,Reject
+DOMAIN,activation.crossutility.com,Reject
 HOST-SUFFIX,local,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,17.0.0.0/8,DIRECT
