--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -37,9 +37,9 @@ static=Outside, proxy, direct, img-url=https://raw.githubusercontent.com/jack-ky
 static=Netflix, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Netflix.png
 static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Apple.png
 static=Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Microsoft.png
-static=CMedia, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/CMedia.png
+;static=CMedia, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/CMedia.png
 static=Mainland, direct, Outside, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Mainland.png
-static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Speedtest.png
+;static=Speedtest, Outside, direct, img-url=https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/IconSet/Speedtest.png
 
 # static 策略是静态策略，需要手动选择节点
 # available 策略是健康检查策略，将会自动使用策略组内第一个可联通的节点（在触发策略时启动 URL 测试）
@@ -59,9 +59,9 @@ https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Out
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Netflix.list, tag=Netflix (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Microsoft.list, tag=Microsoft (Stick Rules), enabled=true
-https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), enabled=true
+;https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/CMedia.list, tag=CMedia (Stick Rules), enabled=true
 https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
-https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
+;https://raw.githubusercontent.com/jack-kylin/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
 [rewrite_remote]
 
 [server_local]
